d2c-org/ilh-sales/base-objects/main/default/objects/Opportunity/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ILH: The credit union or other association the consumer is associated to for the opportunity.</description>
    <label>Affiliation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Affiliation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliation Opportunities</relationshipLabel>
    <relationshipName>AffiliationOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>