d2c-org/ilh-sales/base-objects/main/default/objects/Opportunity/fields/InsurancePurpose__c.field-meta.xml
<CustomField>
    <fullName>InsurancePurpose__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>ILH: Need or purpose for the insurance coverage, such as funeral expenses or income replacement. This is a requirement for the needs assessment.</description>
    <label>Insurance Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Final Expenses</fullName>
            </value>
            <value>
                <fullName>Income Replacement</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>