d2c-org/ilh-sales/base-objects/main/default/objects/Opportunity/fields/ProposedCoverage__c.field-meta.xml
<CustomField>
    <fullName>ProposedCoverage__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>if applicable, the amount of coverage targeted in the primary campaign source</description>
    <label>Proposed Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>