d2c-org/ilh-sales/base-objects/main/default/objects/Opportunity/recordTypes/ILHSales.recordType-meta.xml
<RecordType>
    <fullName>ILHSales</fullName>
    <active>true</active>
    <businessProcess>ILH Sales</businessProcess>
    <label>ILH Sales</label>
</RecordType>